# Adaptone-mixer

./: .gitattributes  .gitignore  .gitmodules  README.md  cmake-code-style.xml  cpp-code-style.xml
source/Communication/: CMakeLists.txt
source/Communication/include/Communication/: ApplicationWebSocket.h  Dummy.h
source/Communication/include/Communication/Handlers/: ApplicationMessageHandler.h  ConnectionHandler.h
source/Communication/include/Communication/Messages/: ApplicationMessage.h  ChannelGain.h  PositionType.h
source/Communication/src/: ApplicationWebSocket.cpp  Dummy.cpp
source/Communication/src/Handlers/: ApplicationMessageHandler.cpp  ConnectionHandler.cpp
source/Communication/src/Messages/: ApplicationMessage.cpp  ChannelGain.cpp
source/Communication/src/Messages/Initialization/: ConfigurationChoiceMessage.cpp  ConfigurationConfirmationMessage.cpp  ConfigurationPosition.cpp  InitialParametersCreationMessage.cpp  LaunchInitializationMessage.cpp  OptimizePositionMessage.cpp  OptimizedPositionMessage.cpp  PositionConfirmationMessage.cpp  RelaunchInitializationMessage.cpp  ReoptimizePositionMessage.cpp  SymmetryConfirmationMessage.cpp
source/Communication/src/Messages/Input/: ChangeAllProcessingParametersMessage.cpp  ChangeAuxiliaryMixInputVolumeMessage.cpp  ChangeAuxiliaryMixInputVolumesMessage.cpp  ChangeAuxiliaryOutputEqGainsMessage.cpp  ChangeAuxiliaryOutputVolumeMessage.cpp  ChangeInputEqGainsMessage.cpp  ChangeInputGainMessage.cpp  ChangeInputGainsMessage.cpp  ChangeMasterMixInputVolumeMessage.cpp  ChangeMasterMixInputVolumesMessage.cpp  ChangeMasterOutputEqGainsMessage.cpp  ChangeMasterOutputVolumeMessage.cpp  ListenProbeMessage.cpp  StopProbeListeningMessage.cpp  ToogleUniformizationMessage.cpp
source/Communication/src/Messages/Output/: InputSpectrumMessage.cpp  SoundErrorMessage.cpp  SoundLevelMessage.cpp
source/Communication/test/: CMakeLists.txt
source/Communication/test/src/Handlers/: ApplicationMessageHandlerTests.cpp
source/Communication/test/src/Messages/: ChannelGainTests.cpp  PositionTypeTests.cpp
source/Mixer/: CMakeLists.txt  latency_usb.py
source/Mixer/include/Mixer/: ChannelIdMapping.h  Mixer.h  MixerAnalysisDispatcher.h  MixerApplicationMessageHandler.h  MixerConnectionHandler.h
source/Mixer/include/Mixer/AudioInput/: AlsaAudioInput.h  AudioInput.h  RawFileAudioInput.h
source/Mixer/include/Mixer/AudioOutput/: AlsaAudioOutput.h  AudioOutput.h  RawFileAudioOutput.h
source/Mixer/include/Mixer/Configuration/: AudioConfiguration.h  AudioInputConfiguration.h  AudioOutputConfiguration.h  Configuration.h  (+3 more)
source/Mixer/resources/: configuration.properties  input.raw
source/Mixer/src/: ChannelIdMapping.cpp  Mixer.cpp  MixerAnalysisDispatcher.cpp  MixerApplicationMessageHandler.cpp  MixerConnectionHandler.cpp  main.cpp
source/Mixer/src/AudioInput/: AlsaAudioInput.cpp  AudioInput.cpp  RawFileAudioInput.cpp
source/Mixer/src/AudioOutput/: AlsaAudioOutput.cpp  AudioOutput.cpp  RawFileAudioOutput.cpp
source/Mixer/src/Configuration/: AudioConfiguration.cpp  AudioInputConfiguration.cpp  AudioOutputConfiguration.cpp  Configuration.cpp  LoggerConfiguration.cpp  UniformizationConfiguration.cpp  WebSocketConfiguration.cpp
source/Mixer/test/: CMakeLists.txt
source/Mixer/test/src/: ChannelIdMappingTests.cpp  MixerAnalysisDispatcherTests.cpp  main.cpp
source/SignalProcessing/: CMakeLists.txt
source/SignalProcessing/include/SignalProcessing/: AnalysisDispatcher.h  ArmadilloDummy.h  ProcessingDataType.h  SignalProcessor.h  SignalProcessorParameters.h  SpecificSignalProcessor.h
source/SignalProcessing/src/: AnalysisDispatcher.cpp  ArmadilloDummy.cpp  SignalProcessor.cpp  SignalProcessor.cu  SpecificSignalProcessor.cpp
source/SignalProcessing/src/Analysis/: RealtimeSpectrumAnalyser.cpp  SpectrumDecimator.cpp
source/SignalProcessing/src/Cuda/: CudaSignalProcessor.cu
source/SignalProcessing/src/Parameters/: DelayParameters.cpp  RealtimeParameters.cpp  SignalProcessorParameters.cpp
source/SignalProcessing/test/: CMakeLists.txt
source/SignalProcessing/test/src/: ArmadilloDummyTests.cpp  SignalProcessorParametersTests.cpp
source/Uniformization/: CMakeLists.txt
source/Uniformization/include/Uniformization/: AutoPosition.h  Dummy.h  Math.h  Probe.h  Room.h  Speaker.h  UniformizationProbeMessageHandler.h  UniformizationService.h  UniformizationServiceParameters.h  autoPosition.h
source/Uniformization/src/: AutoPosition.cpp  Math.cpp  Probe.cpp  Room.cpp  Speaker.cpp  UniformizationProbeMessageHandler.cpp  UniformizationService.cpp  UniformizationServiceParameters.cpp
source/Uniformization/src/Communication/: NetworkBuffer.cpp  ProbeDiscoverer.cpp  ProbeMessageHandler.cpp  ProbeServer.cpp  ProbeServerParameters.cpp  ProbeServers.cpp  RecordResponseMessageAgregator.cpp
source/Uniformization/src/Model/: AutoPosition.cpp  ModelElement.cpp  Probe.cpp  Room.cpp  Speaker.cpp
source/Uniformization/src/SignalOverride/: GenericSignalOverride.cpp  HeadphoneProbeSignalOverride.cpp  PassthroughSignalOverride.cpp  SpecificSignalOverride.cpp  SweepSignalOverride.cpp
source/Uniformization/test/: CMakeLists.txt
source/Uniformization/test/src/: AutoPositionTests.cpp  MathTests.cpp  UniformizationServiceParametersTests.cpp  autoPositionTests.cpp
source/Utils/: CMakeLists.txt
source/Utils/include/Utils/: ClassMacro.h  Math.h  StringUtils.h  Time.h  TypeTraits.h
source/Utils/src/Configuration/: Properties.cpp
source/Utils/src/Data/: PcmAudioFrame.cpp  PcmAudioFrameFormat.cpp  RawAudioFrame.cpp  SpectrumPoint.cpp
source/Utils/src/Exception/: InvalidValueException.cpp  LoggedException.cpp  NetworkException.cpp  NetworkTimeoutException.cpp  NotSupportedException.cpp  PropertyNotFoundException.cpp  PropertyParseException.cpp
source/Utils/src/Logger/: ConsoleLogger.cpp  FileLogger.cpp  Logger.cpp
source/Utils/src/Network/: Endpoint.cpp  NetworkBuffer.cpp
source/Utils/src/Threading/: Semaphore.cpp  SpinLock.cpp  SpinLockSemaphore.cpp
source/Utils/test/: CMakeLists.txt
source/Utils/test/src/: MathTests.cpp  TimeTests.cpp
(+268 files in other folders)
